# fish-assistant

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
docs/: pre-commit.md
functions/apps/: k8s_tcp_proxy.fish  rename_flux_sample.fish
functions/common/: http_test.fish  imgconv.fish  lnabs.fish  mac_user_migrate.fish  play3d.fish
plugins/brow/: README.md
plugins/brow/completions/: brow.fish
plugins/brow/conf.d/: brow.fish
plugins/brow/docs/: memory.md
plugins/brow/functions/: _brow_config.fish  _brow_forward.fish  _brow_i18n.fish  _brow_parse_time.fish  _brow_pod.fish  brow.fish
plugins/brow/i18n/: README.en.md  README.md  README.ru.md  en.json  ru.json  zh.json
plugins/codepack/functions/: codepack.fish  inspect.fish
plugins/dfm/completions/: dfm.fish
plugins/dfm/functions/: dfm.fish
plugins/fa/completions/: fa.fish
plugins/fa/functions/: fa.fish
plugins/flux/: README.md  generate_flux_image.py  pyproject.toml
plugins/flux/completions/: flux.fish
plugins/flux/functions/: flux.fish
plugins/fzl/completions/: fzl.fish
plugins/fzl/functions/: fzl.fish
plugins/gits/functions/: gits.fish
plugins/nvm/: README.md
plugins/pdf_decrypt/completions/: pdf_decrypt.fish
plugins/pdf_decrypt/functions/: pdf_decrypt.fish
plugins/tmuxf/completions/: tmuxf.fish
plugins/tmuxf/functions/: tmuxf.fish
plugins/token_count/: README.md  install.fish  requirements.txt  token_counter.py
plugins/token_count/completions/: token_count.fish
plugins/token_count/functions/: token_count.fish
plugins/whisper/: transcribe.py
(+3 files in other folders)
