[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flux-image-generator"
version = "0.1.0"
description = "Tool for generating images using Flux AI models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dong Hao"}
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.0.270",
]

[tool.hatch.build.targets.wheel]
packages = ["fish/plugins/flux"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I"]
